--- a/Voca/package.json
+++ b/Voca/package.json
@@ -43,5 +43,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": {
+    "/socket.io": {
+      "target": "http://localhost:5000",
+      "ws": true
+    }
+  }
 }
