chaning proxy from obj to string

--- a/Voca/package.json
+++ b/Voca/package.json
@@ -43,10 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": {
-    "/socket.io": {
-      "target": "http://localhost:5000",
-      "ws": true
-    }
-  }
+  "proxy": "http://localhost:5000"
 }
