adding in "justmycode": false to config to debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
                 "FLASK_APP": "main.py",
                 "FLASK_ENV": "development"
             },
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "justMyCode": false
         },
         {
             "name": "Launch Chrome against localhost",
