--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
             "justMyCode": false
         },
         {
-            "name": "Launch Chrome against localhost",
-            "type": "chrome",
+            "name": "Launch LibreWolf against localhost",
+            "type": "firefox",
             "request": "launch",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}/Voca/src"
@@ -25,7 +25,7 @@
     "compounds": [
         {
             "name": "Flask + React",
-            "configurations": ["Python: Flask", "Launch Chrome against localhost"]
+            "configurations": ["Python: Flask", "Launch LibreWolf against localhost"]
         }
     ]
 }
