--- a/Voca/package.json
+++ b/Voca/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.1",
     "fuse.js": "^7.0.0",
     "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
