--- a/server/package.json
+++ b/server/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://live-chat-app-doaz.onrender.com"
 }
