updating database url connection

--- a/server/Voca_env/.env
+++ b/server/Voca_env/.env
@@ -1,3 +1,5 @@
-DATABASE_URL=postgresql://postgres:Talintiar123@localhost:5432/userdata
+DATABASE_URL=postgresql://users_database_xz8x_user:otApHYv9tr6smNmsMYaTjza9qD9sFEVT@dpg-cqmn9c5svqrc73fd29ng-a/users_database_xz8x
 SECRET_KEY=kitty_kat
-PORT=5000
+PORT=5432
+
+# postgresql://postgres:Talintiar123@localhost:5432/userdata
