using external link instead of internal

--- a/server/Voca_env/.env
+++ b/server/Voca_env/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://users_database_xz8x_user:otApHYv9tr6smNmsMYaTjza9qD9sFEVT@dpg-cqmn9c5svqrc73fd29ng-a/users_database_xz8x
+DATABASE_URL=postgresql://users_database_xz8x_user:otApHYv9tr6smNmsMYaTjza9qD9sFEVT@dpg-cqmn9c5svqrc73fd29ng-a.ohio-postgres.render.com/users_database_xz8x
 SECRET_KEY=kitty_kat
 PORT=5432
 
