Modifies env file

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql://users_database_xz8x_user:otApHYv9tr6smNmsMYaTjza9qD9sFEVT@dpg-cqmn9c5svqrc73fd29ng-a.ohio-postgres.render.com/users_database_xz8x
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/live_chat_app
 SECRET_KEY=kitty_kat
-PORT=5432
-USER=users_database_xz8x_user
-PASSWORD=otApHYv9tr6smNmsMYaTjza9qD9sFEVT
+PORT=5000
+USER=postgres
+PASSWORD=postgres
 
 # postgresql://postgres:Talintiar123@localhost:5432/userdata
