--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/live_chat_app
+DATABASE_URL=postgresql://postgres:Talintiar123@localhost:5432/userdata
 SECRET_KEY=kitty_kat
 PORT=5000
-USER=postgres
-PASSWORD=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
 
 # postgresql://postgres:Talintiar123@localhost:5432/userdata
