--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "opn": "^6.0.0"
   }
 }
