--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,7 @@ SECRET_KEY=kitty_kat
 PORT=5000
 DB_USER=postgres
 DB_PASSWORD=postgres
+BROWSER=librewolf
+
 
 # postgresql://postgres:Talintiar123@localhost:5432/userdata
