--- a/client-vite/live_chat_app/package.json
+++ b/client-vite/live_chat_app/package.json
@@ -22,7 +22,9 @@
     "fontawesome": "^5.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
