--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
     "react": "^18.3.1",
@@ -33,5 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "vite": "^5.4.9"
-  }
+  },
+  "proxy": "https://localhost:5000"
 }
