--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-commonjs": "^0.10.3"
   },
   "proxy": "https://localhost:5000"
 }
