--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch": "vite build --watch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
